version green stripe image changed to be behind the map. It overlaped Maine on the map of USA when viewed with low screen width. issue #25.

--- a/wsgi/openshift/geography/static/css/app.css
+++ b/wsgi/openshift/geography/static/css/app.css
@@ -97,7 +97,7 @@ ul.dropdown-menu.login {
   right: 0px;
   position: absolute;
   top: 50px;
-  z-index: 10; }
+  z-index: 5; }
 
 .vip .map-container {
   background: url(../img/flower_bg.jpg) bottom right; }
