--- a/wsgi/openshift/geography/static/sass/_global.sass
+++ b/wsgi/openshift/geography/static/sass/_global.sass
@@ -46,7 +46,7 @@ ul.dropdown-menu.login
   right: 0px
   position: absolute
   top: 50px
-  z-index: 10
+  z-index: 5
 
 .vip
   .map-container
